add skills in main page

--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personalwebsite",
+  "name": "Ivan Atias Personal Website",
   "version": "0.1.0",
   "private": true,
   "keywords": [
