--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ivan Atias Personal Website",
+  "name": "www.ivanatias.codes",
   "version": "0.1.0",
   "private": true,
   "keywords": [
@@ -18,13 +18,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
+    "next-share": "^0.14.0",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
