--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -29,7 +29,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-refractor": "^2.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
