--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -26,11 +26,11 @@
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^6.3.11",
     "intersection-observer": "^0.12.2",
-    "next": "12.1.6",
-    "next-share": "^0.14.0",
+    "next": "^12.2.2",
+    "next-share": "^0.16.0",
     "next-themes": "^0.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-refractor": "^2.1.7"
   },
@@ -38,8 +38,8 @@
     "@next/bundle-analyzer": "^12.2.1",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "^12.2.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
