build: remove carets

--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -21,29 +21,29 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
-    "@portabletext/react": "^1.0.6",
-    "@sanity/asset-utils": "^1.3.0",
-    "@sanity/client": "^3.4.1",
-    "@sanity/image-url": "^1.0.1",
-    "framer-motion": "^7.3.5",
-    "intersection-observer": "^0.12.2",
-    "next": "^12.3.0",
-    "next-share": "^0.18.1",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-refractor": "^2.1.7"
+    "@portabletext/react": "1.0.6",
+    "@sanity/asset-utils": "1.3.0",
+    "@sanity/client": "3.4.1",
+    "@sanity/image-url": "1.0.1",
+    "framer-motion": "7.3.5",
+    "intersection-observer": "0.12.2",
+    "next": "12.3.0",
+    "next-share": "0.18.1",
+    "next-themes": "0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.4.0",
+    "react-refractor": "2.1.7"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.3.0",
-    "autoprefixer": "^10.4.11",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.23.1",
-    "eslint-config-next": "^12.3.0",
-    "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8"
+    "@next/bundle-analyzer": "12.3.0",
+    "autoprefixer": "10.4.11",
+    "cross-env": "7.0.3",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "eslint-config-prettier": "8.5.0",
+    "postcss": "8.4.16",
+    "prettier": "2.7.1",
+    "tailwindcss": "3.1.8"
   }
 }
