--- a/portfolio__backend/.eslintrc
+++ b/portfolio__backend/.eslintrc
@@ -1,3 +1,3 @@
 {
-  "extends": "@sanity/eslint-config-studio, @babel/present-env"
+  "extends": "@sanity/eslint-config-studio, @babel/preset-env"
 }
