--- a/portfolio__frontend/package.json
+++ b/portfolio__frontend/package.json
@@ -44,6 +44,6 @@
     "eslint-config-prettier": "8.5.0",
     "postcss": "8.4.18",
     "prettier": "2.7.1",
-    "tailwindcss": "3.1.8"
+    "tailwindcss": "^3.2.3"
   }
 }
