--- a/portfolio__backend/package.json
+++ b/portfolio__backend/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Ivan Atias <ivan.d.atias@gmail.com>",
+  "author": "Ivan Atias",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,19 +14,19 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "2.35.0",
+    "@sanity/base": "2.35.4",
     "@sanity/code-input": "2.35.0",
-    "@sanity/core": "2.35.0",
-    "@sanity/default-layout": "2.35.0",
-    "@sanity/default-login": "2.35.0",
-    "@sanity/desk-tool": "2.35.1",
+    "@sanity/core": "2.35.3",
+    "@sanity/default-layout": "2.35.4",
+    "@sanity/default-login": "2.35.4",
+    "@sanity/desk-tool": "2.35.4",
     "@sanity/eslint-config-studio": "2.0.1",
     "@sanity/vision": "2.35.0",
-    "eslint": "8.27.0",
+    "eslint": "8.30.0",
     "prop-types": "15.8",
-    "react": "18.2",
-    "react-dom": "18.2",
-    "react-icons": "4.6.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "4.7.1",
     "styled-components": "5.3.6"
   }
 }
