--- a/portfolio__backend/package.json
+++ b/portfolio__backend/package.json
@@ -8,25 +8,22 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "2.35.4",
-    "@sanity/code-input": "2.35.0",
-    "@sanity/core": "2.35.3",
-    "@sanity/default-layout": "2.35.4",
-    "@sanity/default-login": "2.35.4",
-    "@sanity/desk-tool": "2.35.4",
+    "@sanity/code-input": "3.0.1",
     "@sanity/eslint-config-studio": "2.0.1",
-    "@sanity/vision": "2.35.0",
+    "@sanity/vision": "3.1.2",
     "eslint": "8.30.0",
     "prop-types": "15.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "4.7.1",
+    "sanity": "3.1.2",
     "styled-components": "5.3.6"
   }
 }
