--- a/portfolio__backend/package.json
+++ b/portfolio__backend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
     "sanity": "3.1.2",
+    "sanity-plugin-media": "2.0.2",
     "styled-components": "5.3.6"
   }
 }
